Eroor messages added

--- a/MVC_POE/Views/ReportIssues/CreateReportIssues.cshtml
+++ b/MVC_POE/Views/ReportIssues/CreateReportIssues.cshtml
@@ -35,6 +35,7 @@
                         <option value="@loc">@loc</option>
                     }
                 </select>
+                <span asp-validation-for="Location" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -46,6 +47,7 @@
                         <option value="@cat">@cat</option>
                     }
                 </select>
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
 
             <div class="form-group">
